--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </form>
         </section>
     </div>
-    <footer class="footer">Footer Content</footer>
+    <footer class="footer">By Miguel Angel</footer>
     <script src="java/script.js"></script>
 </body>
 
